fix(mon-pix): add spacing between proposal paragraphes

--- a/mon-pix/app/styles/components/_qcm-proposals.scss
+++ b/mon-pix/app/styles/components/_qcm-proposals.scss
@@ -5,6 +5,10 @@
   justify-content: flex-start;
   margin-left: 7px;
 
+  & + .proposal-paragraph {
+    margin-top: 1rem;
+  }
+
   input[type='checkbox'] {
     flex-shrink: 0;
   }
